--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -1,21 +1,120 @@
 .Nav {
   width: 100%;
   height: 4.5rem;
-  border-bottom: 2px solid black;
   background-color: var(--main-bg-color);
   color: var(--text-color);
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 var(--main-padding-x);
+  position: relative;
 }
-.Nav h1 {
+@media (max-width: 768px) {
+  .Nav {
+    flex-direction: column;
+    padding: 0 var(--mobile-padding-y);
+    padding-top: 0.5rem;
+    height: auto;
+    align-items: start;
+  }
+}
+.Nav .left h1 {
   font-size: 1.4rem;
   font-weight: var(--font-medium-bold);
   font-family: "ui-sans-serif";
 }
-.Nav h1 span {
+@media (max-width: 768px) {
+  .Nav .left h1 {
+    font-size: 1.2rem;
+  }
+}
+.Nav .left h1 span {
   font-size: var(--font-big);
   font-weight: var(--font-high-bold);
   font-family: var(--font-logo);
+}
+@media (max-width: 768px) {
+  .Nav .left h1 span {
+    font-size: 1.5rem;
+    padding: var(--mobile-padding-x) 0;
+  }
+}
+.Nav .right {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  /* show input when expanded */
+}
+@media (max-width: 768px) {
+  .Nav .right {
+    width: 100%;
+    margin-top: 1rem;
+  }
+}
+.Nav .right .input-box {
+  display: flex;
+  align-items: center;
+  height: 2.5rem;
+  padding: 0 0.5rem;
+  border-radius: 0.3rem;
+  background: var(--light-bg-box);
+  overflow: hidden;
+}
+@media (max-width: 768px) {
+  .Nav .right .input-box {
+    width: 100% !important;
+  }
+  .Nav .right .input-box input {
+    opacity: 1 !important;
+    pointer-events: auto;
+  }
+}
+.Nav .right .input-box .search {
+  font-size: 1.5rem;
+  flex-shrink: 0;
+}
+.Nav .right .input-box input {
+  flex: 1;
+  border: none;
+  outline: none;
+  background: transparent;
+  color: white;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+  font-size: 1.5rem;
+  padding-left: 0.5rem;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.Nav .right .input-box:has(input:not(:-moz-placeholder)) input {
+  opacity: 1;
+}
+.Nav .right .input-box:has(input:not(:placeholder-shown)) input,
+.Nav .right .input-box:hover input,
+.Nav .right .input-box:focus-within input {
+  opacity: 1;
+}
+.Nav .right .icon-box {
+  cursor: pointer;
+  display: flex;
+  gap: 0.5rem;
+  font-size: 2rem;
+}
+.Nav .right .icon-box .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 0.3em;
+  background-color: var(--light-bg-box);
+}
+@media (max-width: 768px) {
+  .Nav .right .icon-box {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    display: flex;
+    gap: 0.5rem;
+  }
 }/*# sourceMappingURL=nav.css.map */
