--- a/client/src/components/nav.scss
+++ b/client/src/components/nav.scss
@@ -1,21 +1,129 @@
-.Nav{
+.Nav {
     width: 100%;
     height: 4.5rem;
-    border-bottom:2px solid black;
     background-color: var(--main-bg-color);
     color: var(--text-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 var(--main-padding-x);
-    h1{
-        font-size: 1.4rem;
-        font-weight: var(--font-medium-bold);
-        font-family: "ui-sans-serif";
-        span{
-            font-size: var(--font-big);
-            font-weight: var(--font-high-bold);
-            font-family: var(--font-logo) ;
+    position: relative;
+
+    @media (max-width:768px) {
+        flex-direction: column;
+        padding: 0 var(--mobile-padding-y);
+        padding-top: .5rem;
+        height: auto;
+        align-items: start;
+
+    }
+
+    .left {
+        h1 {
+            font-size: 1.4rem;
+            font-weight: var(--font-medium-bold);
+            font-family: "ui-sans-serif";
+
+            @media (max-width:768px) {
+                font-size: 1.2rem;
+            }
+
+            span {
+                font-size: var(--font-big);
+                font-weight: var(--font-high-bold);
+                font-family: var(--font-logo);
+
+                @media (max-width:768px) {
+                    font-size: 1.5rem;
+                    padding: var(--mobile-padding-x) 0;
+                }
+            }
+        }
+
+    }
+
+    .right {
+        display: flex;
+        align-items: center;
+        gap: .5rem;
+
+        @media (max-width:768px) {
+            width: 100%;
+            margin-top: 1rem;
+        }
+
+        .input-box {
+            display: flex;
+            align-items: center;
+            height: 2.5rem;
+            padding: 0 .5rem;
+            border-radius: .3rem;
+            background: var(--light-bg-box);
+            overflow: hidden;
+
+            @media (max-width: 768px) {
+                width: 100% !important;
+                input {
+                    opacity: 1 !important;
+                    pointer-events: auto;
+                }
+            }
+
+            .search {
+                font-size: 1.5rem;
+                flex-shrink: 0;
+            }
+
+            input {
+                flex: 1;
+                border: none;
+                outline: none;
+                background: transparent;
+                color: white;
+                opacity: 0;
+                transition: opacity .2s ease;
+                font-size: 1.5rem;
+                padding-left: .5rem;
+                cursor: pointer;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+        }
+
+
+        /* show input when expanded */
+        .input-box:has(input:not(:placeholder-shown)),
+        .input-box:hover,
+        .input-box:focus-within {
+            input {
+                opacity: 1;
+            }
+        }
+
+        .icon-box {
+            cursor: pointer;
+            display: flex;
+            gap: .5rem;
+            font-size: 2rem;
+
+            .icon {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 2.5rem;
+                height: 2.5rem;
+                border-radius: .3em;
+                background-color: var(--light-bg-box);
+            }
+
+            @media (max-width:768px) {
+                position: absolute;
+                top: .5rem;
+                right: .5rem;
+                display: flex;
+                gap: .5rem;
+            }
+
+
         }
     }
 }
