--- a/client/src/components/Liked/like.scss
+++ b/client/src/components/Liked/like.scss
@@ -1,9 +1,9 @@
-.Menu {
+.Like {
     position: fixed;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.45);
     z-index: 100;
 
@@ -15,6 +15,7 @@
         width: 25rem;
         height: 100%;
         background-color: white;
+        overflow-y: hidden;
 
         @media (max-width:768px) {
             width: 100%;
@@ -40,29 +41,21 @@
             }
         }
 
-        .mini-container {
+        .grid-container {
             width: 100%;
-            height: 12rem;
-            display: flex;
-            flex-direction: column;
+            height: calc(100% - 5rem);
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-row: auto;
             gap: .5rem;
             padding: 0 1rem;
+            overflow-y: auto;
 
             .box {
+                aspect-ratio: 1 / 1;
                 background-color: var(--light-bg-box);
+                border-radius: .5em;
                 cursor: pointer;
-                border-radius: .3em;
-                display: flex;
-                align-items: center;
-                width: 100%;
-                height: 3rem;
-                font-size: var(--font-medium);
-                padding-left: 2rem;
-                transition: background-color .3s ease;
-
-                &:hover{
-                    background-color: #8a8a8a;
-                }
             }
         }
     }
