--- a/client/src/app/home.css
+++ b/client/src/app/home.css
@@ -1,6 +1,51 @@
 .Home {
   width: 100%;
-  height: calc(100% - 4.5rem);
   background-color: var(--main-bg-color);
   color: var(--text-color);
+  padding: 0 var(--main-padding-x);
+}
+@media (max-width: 768px) {
+  .Home {
+    padding: 0 var(--mobile-padding-x);
+  }
+}
+.Home .nav {
+  width: 100%;
+  height: 4.5rem;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 1rem;
+}
+@media (max-width: 768px) {
+  .Home .nav {
+    margin-top: 1rem;
+    gap: 0.5rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.Home .nav .box {
+  border-radius: 0.5em;
+  width: 100%;
+  min-height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--light-bg-box);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+@media (max-width: 768px) {
+  .Home .nav .box:last-child {
+    grid-column: 1/-1;
+  }
+}
+.Home .nav .box:hover {
+  color: white;
+  background-color: #8a8a8a;
+}
+.Home .nav .box h1 {
+  font-size: var(--font-medium);
 }/*# sourceMappingURL=home.css.map */
