--- a/client/src/app/home.scss
+++ b/client/src/app/home.scss
@@ -1,6 +1,54 @@
 .Home {
     width: 100%;
-    height: calc(100% - 4.5rem);
     background-color: var(--main-bg-color);
     color: var(--text-color);
+    padding: 0 var(--main-padding-x);
+
+    @media (max-width: 768px) {
+        padding: 0 var(--mobile-padding-x);
+    }
+
+    .nav {
+        width: 100%;
+        height: 4.5rem;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 1rem;
+
+        @media (max-width: 768px) {
+            margin-top: 1rem;
+            gap: .5rem;
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+
+        .box {
+            border-radius: .5em;
+            width: 100%;
+            min-height: 4rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: var(--light-bg-box);
+            cursor: pointer;
+            transition: all .3s ease;
+            user-select: none;
+
+            @media (max-width: 768px) {
+                &:last-child {
+                    grid-column: 1 / -1;
+                }
+
+            }
+
+            &:hover {
+                color: white;
+                background-color: #8a8a8a;
+            }
+
+            h1 {
+                font-size: var(--font-medium);
+            }
+        }
+    }
 }
