--- a/client/src/app/signin/signin.scss
+++ b/client/src/app/signin/signin.scss
@@ -1,4 +1,4 @@
-.Signup {
+.Signin {
     width: 100%;
     height: 100%;
     background-color: var(--main-bg-color);
@@ -53,7 +53,7 @@
                     user-select: none;
                     text-align: center;
                     font-size: 3rem;
-                    line-height: 2.5rem;
+                    line-height: 3rem;
                     font-weight: 500;
                 }
             }
@@ -136,7 +136,8 @@
                             0 0 0 3px rgba(47, 111, 237, 0.15),
                             0 4px 12px rgba(0, 0, 0, 0.08);
                     }
-                    &:active{
+
+                    &:active {
                         scale: .9;
                     }
                 }
@@ -157,15 +158,7 @@
                     }
                 }
 
-                .ts {
-                    text-align: center;
-
-                    span {
-                        font-weight: 800;
-                    }
-                }
-
-                .signin {
+                .signup {
                     text-align: center;
                     margin-top: 1rem;
 
